layout issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,8 +143,8 @@ nav{
 .glyphicon{
 	font-size: 2em;
 	margin-top: 0.3em;
-	margin-left: 5%;
-	margin-right: 5%;
+	margin-left: 2%;
+	margin-right: 2%;
 }
 
 #cancel{
